k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-template-deployment
  labels:
    app: python-template
spec:
  selector:
    matchLabels:
      app: python-template
      role: web
  template:
    metadata:
      labels:
        app: python-template
        role: web
    spec:
      containers:
      - image: registry.openculinary.org/reciperadar/python-template
        imagePullPolicy: IfNotPresent
        name: python-template
        ports:
        - containerPort: 8000
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmpfs
      volumes:
      - name: tmpfs
        emptyDir: {}
