k8s/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-template-deployment
  labels:
    app: python-template
spec:
  selector:
    matchLabels:
      app: python-template
      role: web
  template:
    metadata:
      labels:
        app: python-template
        role: web
    spec:
      imagePullSecrets:
      - name: gitlab-registry
      containers:
      - image: registry.gitlab.com/openculinary/python-template
        imagePullPolicy: IfNotPresent
        name: python-template
        ports:
        - containerPort: 80
  replicas: 1
