k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-template-service
spec:
  selector:
    app: python-template
    role: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
