k8s/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-template-service
spec:
  selector:
    app: python-template
  ports:
    - protocol: TCP
      port: 80
