k8s/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-template-ingress
spec:
  rules:
  - host: python-template
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: python-template-service
            port:
              number: 80
